--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4",
+        "vue-loader": "^16.8.3"
+    },
+    "dependencies": {
+        "vue": "^3.2.45"
     }
 }
