--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
+        "laravel/telescope": "^4.9",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
