--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
+        "@vuepic/vue-datepicker": "^4.2.0",
         "daisyui": "^2.42.1",
         "pinia": "^2.0.23",
         "vue": "^3.2.45",
