--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@vuepic/vue-datepicker": "^4.2.0",
         "crypto-js": "^4.1.1",
         "daisyui": "^2.42.1",
+        "moment": "^2.29.4",
         "pinia": "^2.0.23",
         "vue": "^3.2.45",
         "vue-router": "^4.1.6"
