--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "spatie/laravel-translatable": "5.2"
+        "spatie/laravel-translatable": "5.2",
+        "laravel/telescope": "^4.9"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -20,7 +21,6 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
-        "laravel/telescope": "^4.9",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
